LPS-39355 fix portlet-title-text alignment

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
@@ -160,6 +160,11 @@
 		padding: 0 10px;
 	}
 
+	.portlet-title-text {
+		display: inline-block;
+		vertical-align: top;
+	}
+
 	.portlet-nested-portlets .portlet-body .portlet {
 		border: 1px solid #E5E5E5;
 	}
